frontend/src/assets/main.scss
$premium: #ffb800;
$space_hero: 8vw;
$box-shadow: 0 0.5rem 20px rgba(0, 0, 0, 0.2);
@import '../../node_modules/bootstrap/scss/bootstrap.scss';

html {
    font-size: 15px;
}
.nav-link {
    padding: 0 !important;
    height: 2rem;
    font-size: 1.4rem;
    display: flex;
    align-items: center;
}
main {
    min-height: 100vh;
    padding-bottom: max(50vh, 200px);
}
header{
    z-index: 900;
}
section {
    // margin-top: max(20vh, 100px);
    padding: 20vh 0 10vh 0;
    min-height: 50vh;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}
h1 {
    font-size: 4rem;
}
h2 {
    font-size: 3rem;
}
h3 {
    font-size: 2rem;
}
p {
    font-size: 1.3rem;
}
a {
    text-decoration: none;
}

ul {
    list-style: none;
}
.cta-btn{
    position: relative;
    z-index: 102;
}
.font-smallest {
    font-size: 1rem;
}
.color-premium {
    color: $premium;
}
.space-left {
    padding-left: $space_hero;
}
.vertical-align-top {
    vertical-align: top;
}
.lone-h2 {
    margin-bottom: 12vh !important;
}
@media only screen and (width <= 992px) {
    html {
        font-size: 14px;
        .space-left{
            padding-left: 6.5vw;
        }
        h3 {
            font-size: 1.8rem;
        }
        p {
            font-size: 1rem;
        }
    }
}

@media only screen and (576px <= width <= 768px) {
    html {
        font-size: 13.5px;
        .space-left {
            padding-left: 5vw;
        }
    }
}
@media only screen and (width <= 576px) {
    html {
        font-size: 12px;
        .space-left {
            padding-left: 5vw;
        }
    }
}
.show-team {
    view-timeline-name: --integrante;
    view-timeline-axis: block;
    animation-timeline: --integrante;
    animation-name: show;
    animation-range: entry 25% cover 45%;
    animation-fill-mode: both;
}
@keyframes show {
    0% {
        scale: 0.8;
        opacity: 0;
        transform: translateY(100px);
    }
    100% {
        opacity: 1;
        scale: 1;
        transform: translateY(0);
    }
}

